--- a/game/index.html
+++ b/game/index.html
@@ -1,11 +1,12 @@
-<html lang="en">
-<head>
+<!DOCTYPE html>
+<html>
+  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-	<link rel="stylesheet" type="text/css" href="test.css">
-</head>
-<body>
-    Hello, World!
-</body>
+    <link rel="stylesheet" href="css/main.css">
+    <script src="js/main.js"></script>
+    <title>神経衰弱</title>
+  </head>
+  <body>
+    <table id="table"></table>
+  </body>
 </html>
