--- a/game/index.html
+++ b/game/index.html
@@ -2,11 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="main.css">
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="css/main.css">
+    <script src="js/main.js"></script>
     <title>神経衰弱</title>
   </head>
   <body>
+    <p id="player"></p>
+    <p id="player1_point"></p>
+    <p id="player2_point"></p>
     <table id="table"></table>
   </body>
 </html>
