--- a/game/match/index.html
+++ b/game/match/index.html
@@ -1,10 +1,15 @@
-<html lang="en">
-<head>
+<!DOCTYPE html>
+<html>
+  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    match directory
-</body>
+    <link rel="stylesheet" href="css/main.css">
+    <script src="js/main.js"></script>
+    <title>神経衰弱</title>
+  </head>
+  <body>
+    <p id="player"></p>
+    <p id="player1_point"></p>
+    <p id="player2_point"></p>
+    <table id="table"></table>
+  </body>
 </html>
