--- a/game/index.html
+++ b/game/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Concentration</h1>
-    <button onclick="location.href='room/index.html'">Start</button>
+    <button onclick="location.href='room/'">Start</button>
 </body>
 </html>
