Create Room files

--- a/game/room/index.html
+++ b/game/room/index.html
@@ -2,9 +2,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="room.js" defer></script>
+    <title>Concentration - Room</title>
 </head>
 <body>
-    room directory
+    <p id="state"></p>
+    <div id="timer"></div>
 </body>
 </html>
