--- a/game/index.html
+++ b/game/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Concentration</h1>
-    <button onclick="location.href='room/'">Start</button>
+    <button id="js-start-button">Start</button>
 </body>
 </html>
