--- a/game/room/index.html
+++ b/game/room/index.html
@@ -8,7 +8,6 @@
     <title>Concentration - Room</title>
 </head>
 <body>
-    <p id="state"></p>
-    <div id="timer"></div>
+    <p id="js-state"></p>
 </body>
 </html>
